# rustc-to-wasm-compiler

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: test-build.yml
src/: configuration.rs  configuration_builder.rs  error.rs  lib.rs
tests/: fac.rs_  lib.rs  mocked_fs.rs
